--- a/bbr-devguide.html.md.erb
+++ b/bbr-devguide.html.md.erb
@@ -12,7 +12,7 @@ BBR is a framework for backing up and restoring BOSH deployments and BOSH Direct
 
 The BBR framework consists of a command line interface (CLI) and a set of hooks, which call out to scripts. The framework uses BOSH to orchestrate the execution of backup and restore scripts. BBR allows release authors fine-grained control over how their release is backed up.
 
-### <a id="mechanism"></a> Backup Mechanism
+### <a id="mechanism"></a> Backup mechanism
 
 Different systems require different strategies for backup and restore.
 To help release authors make consistent backups of their systems, the BBR framework provides hooks to
@@ -22,7 +22,7 @@ The following diagram illustrates an example BBR script execution sequence.
 
 ![This diagram is described in detail immediately below.](images/script-execution-order.png)
 
-The diagram above shows a deployment that has two instance groups.
+The diagram shows a deployment that has two instance groups.
 Group foo contains instance foo/0, which contains jobs 1 and 2.
 Group bar contains instances bar/0 and bar/1, each of which contains job 1.
 
@@ -42,12 +42,12 @@ release authors are responsible for naming, creating, testing, and troubleshooti
 and restore scripts.
 
 <p class="note">
-  <strong>Note:</strong> For all releases, these backup and restore jobs might be co-located with
-  those of other releases. Therefore, release authors must give these jobs unique and descriptive
-  names to avoid name collisions.
+<span class="note__title"><strong>Note</strong></span>For all releases, these backup and restore jobs might be co-located with
+those of other releases. Therefore, release authors must give these jobs unique and descriptive
+names to avoid name collisions.
 </p>
 
-###  <a id='script-implementation'></a>Script Organization
+###  <a id='script-implementation'></a>Script organization
 
 BBR sets out a contract with release authors to call designated backup and restore
 scripts under the `/var/vcap/jobs/JOB-NAME/bin/bbr/SCRIPT-NAME` directory:
@@ -89,7 +89,7 @@ These scripts are executed similarly to other release job scripts, such as `star
 BBR checks exit codes of the scripts when orchestrating.
 Exit code `0` indicates success, and any other exit code indicates a failure.
 
-### <a id="directory"></a> Directory Structure of a BOSH Release with BBR Scripts
+### <a id="directory"></a> Directory structure of a BOSH release with BBR scripts
 
 The following is an example directory structure of a BOSH release that includes BBR scripts.
 
@@ -119,13 +119,14 @@ acme-release
 ```
 
 
-### <a id='script-ordering'></a>Script Ordering across Jobs
+### <a id='script-ordering'></a>Script ordering across jobs
 
 During the backup workflow, all `pre-backup-lock` scripts are invoked before the `backup` scripts on all of the jobs in the deployment.
 All `backup` scripts are invoked before the `post-backup-unlock` scripts on all of the jobs in the deployment.
 
 <p class="note">
-  <strong>Important</strong>: Both the <code>pre-backup-lock</code> and <code>post-backup-unlock</code> are called in parallel while respecting the locking order constraints.
+<span class="note__title"><strong>Note</strong></span>
+Both the <code>pre-backup-lock</code> and <code>post-backup-unlock</code> are called in parallel while respecting the locking order constraints.
 </p>
 
 During the restore workflow, all `pre-restore-lock` scripts are invoked before the `restore` scripts on all of the jobs in the deployment.
@@ -138,21 +139,22 @@ The `post-backup-unlock` and `post-restore-unlock` scripts from different jobs a
 when no locking dependency is specified, or the opposite order of lock scripts as stated in metadata scripts.
 When a job specifies locking dependency to a job that does not exist in the current deployment, BBR ignores that dependency.
 
-For more information, see [Metadata Script](#metadata) below.
+For more information, see [Metadata script](#metadata) below.
 
 ### <a id='logs'></a> Logs
 
 The `stdout` and `stderr` streams are captured and sent to the operator who invokes the backup and restore.
 
 <p class="note">
-  <strong>Note:</strong> Release authors should avoid printing sensitive information to <code>stdout</code> or <code>stderr</code>.
-  BBR prints any output from the scripts in case of failure. Ensure your script does not print any sensitive data, such as credentials.
-  In particular, if you are using <code>set -x</code> in your script, add <code>set +x</code> before you use any credentials.
+<span class="note__title"><strong>Note</strong></span>
+Release authors should avoid printing sensitive information to <code>stdout</code> or <code>stderr</code>.
+BBR prints any output from the scripts in case of failure. Ensure your script does not print any sensitive data, such as credentials.
+In particular, if you are using <code>set -x</code> in your script, add <code>set +x</code> before you use any credentials.
 </p>
 
-## <a id='backup-workflow'></a>Backup Workflow
+## <a id='backup-workflow'></a>Backup workflow
 
-### <a id='pre-backup-lock'></a>Pre-Backup-Lock
+### <a id='pre-backup-lock'></a>pre-backup-lock
 
 The release job can have a `pre-backup-lock` script that stops any processes that could make changes to the components being backed up.
 This script must allow the job to lock so that backups are consistent across a cluster.
@@ -160,7 +162,7 @@ This script must allow the job to lock so that backups are consistent across a c
 For example, in a Cloud Foundry deployment, the `pre-backup-lock` script stops Cloud Controller processes
 that might make changes to its blobstore and database. This ensures the blobstore and the Cloud Controller database are consistent with each other.
 
-#### Job Configuration
+#### Job configuration
 
 To add a `pre-backup-lock` script to a job:
 
@@ -211,7 +213,7 @@ The release job can have a backup script that dumps the backup of the job's data
 
 There must be at least one job in the deployment providing a backup script. If there is no backup script, calling `backup` or `pre-backup-check` for the deployment fails.
 
-#### Job Configuration
+#### Job configuration
 
 To add a `backup` script to a release job:
 
@@ -225,11 +227,11 @@ To add a `backup` script to a release job:
       backup.erb: bin/bbr/backup
     ```
 
-### <a id='post-backup-unlock'></a>Post-Backup-Unlock
+### <a id='post-backup-unlock'></a>post-backup-unlock
 
 The backup and restore job can have a `post-backup-unlock` script that undoes the operations performed by `pre-backup-lock`.
 
-#### Job Configuration
+#### Job configuration
 
 To add a `post-backup-unlock` script to a release job:
 
@@ -243,7 +245,7 @@ To add a `post-backup-unlock` script to a release job:
       post-backup-unlock.erb: bin/bbr/post-backup-unlock
     ```
 
-### <a id='error-handling'></a>Error Handling During Backup
+### <a id='error-handling'></a>Error handling during backup
 
 If errors occur during the backup workflow, cleanup tasks are executed to put the system back in a working state.
 
@@ -266,13 +268,13 @@ A normal workflow for backing up a deployment does the below:
     cleanup --> exit
 <% end %>
 
-## <a id='restore-workflow'></a>Restore Workflow
+## <a id='restore-workflow'></a>Restore workflow
 
-### <a id='pre-restore-lock'></a>Pre-Restore-Lock
+### <a id='pre-restore-lock'></a>pre-restore-lock
 
 The release job can have a `pre-restore-lock` script that stops any processes that could make changes to the components being restored. This script must allow the job to lock so that restorations are consistent across a cluster.
 
-#### Job Configuration
+#### Job configuration
 
 To add a `pre-restore-lock` script to a job:
 
@@ -313,7 +315,7 @@ To add a `pre-restore-lock` script to a job:
 
 If a release has a `backup` script, it should also have a `restore` script. The `restore` script expects a backup artifact to be provided in `$BBR_ARTIFACT_DIRECTORY`. For example, when restoring MySQL, the script invokes `mysql` to restore from a mysqldump file.
 
-#### Job Configuration
+#### Job configuration
 
 To add a `restore` script to a release job:
 
@@ -329,11 +331,11 @@ To add a `restore` script to a release job:
     ```
 
 
-### <a id='post-restore-unlock'></a>Post-Restore-Unlock
+### <a id='post-restore-unlock'></a>post-restore-unlock
 
 The release job can have a `post-restore-unlock` script that resumes normal service operation. `post-restore-unlock` should be idempotent because it can be called multiple times even if `pre-restore-lock` has not been not called.
 
-#### Job Configuration
+#### Job configuration
 
 To add a `post-restore-unlock` script to a release:
 
@@ -347,7 +349,7 @@ To add a `post-restore-unlock` script to a release:
       post-restore-unlock.sh.erb: bin/bbr/post-restore-unlock
     ```
 
-### <a id='error-handling-restore'></a>Error Handling During Restore
+### <a id='error-handling-restore'></a>Error handling during restore
 
 If errors occur during the restore workflow, cleanup tasks are executed to put the system back in a working state.
 
@@ -371,7 +373,7 @@ A normal workflow for restoring a deployment does the below:
     cleanup --> exit
 <% end %>
 
-## <a id='metadata'></a>(Optional) Metadata Script
+## <a id='metadata'></a>(Optional) Metadata script
 
 The `metadata` script is an optional script that `bbr` executes before
 any other scripts to get more information about the jobs, for example,
@@ -379,7 +381,7 @@ locking dependencies and whether the BBR job is enabled or not.
 The script is expected to print a `yaml` on standard out with more information
 about the job for backup and restore.
 
-### Job Configuration
+### Job configuration
 
 To add a `metadata` script to a release job:
 
@@ -460,7 +462,7 @@ Validate that restored data are correct.
 
 Where scripts are implemented for releases that are part of larger deployments, you should perform end-to-end testing that validates consistency across releases.
 
-## <a id="bbr-utilities"></a>Backup and Restore Utilities
+## <a id="bbr-utilities"></a>Backup and restore utilities
 
 If your release stores state in a Postgres or MySQL database, deploy the `database-backup-restorer` job from the [backup-and-restore-sdk-release](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release) GitHub repository.
 
@@ -495,12 +497,13 @@ cp $ARTIFACT_DIRECTORY <output_file>
 /var/vcap/jobs/database-backup-restorer/bin/restore /path/to/config.json
 ```
 
-## <a id="bbr-cf"></a>BBR and Cloud Foundry Databases
+## <a id="bbr-cf"></a>BBR and Cloud Foundry databases
 
-<p class="note"><strong>Important</strong>: Release authors must ensure the following.
-    <br><strong>For CF Releases</strong>---Your scripts must respect the <code>release_level_backup</code> job property so the scripts run if set to <code>true</code>, but do nothing if set to <code>false</code>.
+<p class="note important">
+<span class="note__title"><strong>Important</strong></span>
+Release authors must ensure the following.
+<br><strong>For CF Releases</strong>---Your scripts must respect the <code>release_level_backup</code> job property so the scripts run if set to <code>true</code>, but do nothing if set to <code>false</code>.
 </p>
-
 
 BBR provides a pattern for Cloud Foundry release authors that ensures their scripts abide by the BBR Framework contract.
 
@@ -509,7 +512,7 @@ A Cloud Foundry operator adds a `backup-restore` instance to their Cloud Foundry
 If your release requires that you stop your component's processes during backup and restore, you also need to provide `unlock` and `lock` scripts. You can co-locate these scripts on either the `backup-restore` instance or your component's instance. You should co-locate these scripts on the component's instance if you want to interact directly with `monit` or your running job.
 More information about [`unlock`](#post-backup-unlock) and [`lock`](#pre-backup-lock) scripts are below.
 
-### Naming Recommendations
+### Naming recommendations
 
 When Cloud Foundry is deployed, multiple backup and restore scripts are co-located on the
 `backup-restore` instance, separated by job name.
@@ -568,7 +571,7 @@ class jobs/bbr-acmedb lavender
 class jobs/database-backup-restorer turquoise
 <% end %>
 
-## <a id='drats'></a>Acceptance Tests
+## <a id='drats'></a>Acceptance tests
 
 The Disaster Recovery Acceptance Test Suite (DRATs) runs against a Cloud
 Foundry deployment to ensure that backup and restore works as expected.
