--- a/restore.html.md.erb
+++ b/restore.html.md.erb
@@ -9,7 +9,7 @@ To back up a BOSH deployment or BOSH Director with BBR, see the [Backing up with
 
 The steps in this topic allow you to restore a BOSH Director, a BOSH deployment, or both.
 
-## <a id="compatibility"></a> Compatibility of Restore
+## <a id="compatibility"></a> Compatibility of restore
 
 This section describes the restrictions for a backup artifact to be restorable to another environment.
 This section is for guidance only, and <%= vars.recommended_by %> recommends that operators validate their backups
@@ -28,7 +28,9 @@ jobs in the restored environment, but cannot validate the restore beyond that.
 For example, if the MySQL encryption key is different in the restore environment, the BBR restore
 might succeed although the restored MySQL database is unusable.
 
-<p class="note"><strong>Note:</strong> A change in VM size or underlying hardware should not affect
+<p class="note">
+<span class="note__title"><strong>Note</strong></span>
+A change in VM size or underlying hardware should not affect
 BBR's ability to restore data, as long as there is adequate storage space to restore the data.</p>
 
 ## <a id="recreate-vms"></a> Step 1: Re-create VMs
@@ -46,7 +48,7 @@ contains knowledge of this deployment, the Director brings back your VMs for the
 the BOSH Resurrector is enabled.
 For more information about the BOSH Resurrector, see [Auto-healing Capabilities] in the BOSH documentation.
 
-## <a id="artifacts-jumpbox"></a> Step 2: Transfer Artifacts to Jumpbox
+## <a id="artifacts-jumpbox"></a> Step 2: Transfer artifacts to jumpbox
 
 Move your BBR backup artifact from your safe storage location to the jumpbox.
 
@@ -59,7 +61,10 @@ scp LOCAL-PATH-TO-BACKUP-ARTIFACT JUMPBOX-USER/JUMPBOX-ADDRESS
 If this artifact is encrypted, you must decrypt it.
 
 ## <a id='restore'></a> Step 3: Restore
-<p class="note"><strong>Note:</strong> The BBR restore command can take a long time to complete.
+
+<p class="note">
+<span class="note__title"><strong>Note</strong></span>
+The BBR restore command can take a long time to complete.
 You can run it independently of the SSH session so that the process can continue running even if
 your connection to the jumpbox fails. The command above uses <code>nohup</code>, but you run
 the command in a <code>screen</code> or <code>tmux</code> session instead.</p>
@@ -88,9 +93,9 @@ To restore a BOSH Director:
     * `HOST`: This is the address of the BOSH Director with an optional port that defaults to 22. If the BOSH Director is public, this is a URL, such as `https://my-bosh.xxx.cf-app.com`. Otherwise, this is the BOSH Director IP address.
 	  * `PATH-TO-DIRECTOR-BACKUP`: This is the path to the BOSH Director backup you want to restore.
 
-If the command fails, follow the steps in [Recover from a Failing Command](#recover-from-failing-command) below.
+If the command fails, follow the steps in [Recover from a failing command](#recover-from-failing-command) below.
 
-#### <a id='restore-deployment'></a> Restore a BOSH Deployment
+#### <a id='restore-deployment'></a> Restore a BOSH deployment
 
 To restore a BOSH deployment:
 
@@ -115,28 +120,29 @@ To restore a BOSH deployment:
     * `PATH-TO-BOSH-CA-CERTIFICATE`: This is the path to the BOSH Director's Certificate Authority (CA) certificate if the certificate is not verifiable by the local machine's certificate chain.
 	  * `PATH-TO-DEPLOYMENT-BACKUP`: This is the path to the BOSH deployment backup you want to restore.
 
-If the command fails, follow the steps in [Recover from a Failing Command](#recover-from-failing-command) below.
+If the command fails, follow the steps in [Recover from a failing command](#recover-from-failing-command) below.
 
-## <a id="recover-from-failing-command"></a>Recover from a Failing Command
+## <a id="recover-from-failing-command"></a>Recover from a failing command
+
 1. Ensure all the parameters in the command are set.
 1. Ensure the BOSH Director credentials are valid.
 1. Ensure the specified BOSH deployment exists.
 1. Ensure that the jumpbox can reach the BOSH Director.
 1. Ensure the source BOSH deployment is compatible with the target BOSH deployment.
 1. If you see the error message `Directory /var/vcap/store/bbr-backup already exists on instance`, follow the
-steps in [Clean Up after Failed Restore](#manual-clean) below.
+steps in [Clean up after failed restore](#manual-clean) below.
 
-## <a id='cancel-restore'></a>Cancel a Restore
+## <a id='cancel-restore'></a>Cancel a restore
 
 To cancel a restore:
 
 1. Terminate the BBR process by pressing Ctrl-C and typing `yes` to confirm.
 
 Stopping a restore can leave the system in an unusable state and prevent future restores.
-Perform the procedures in the [Clean Up after Failed Restore](#manual-clean) section below to ensure you can
+Perform the procedures in the [Clean up after failed restore](#manual-clean) section below to ensure you can
 perform future restores.
 
-## <a id="manual-clean"></a>Clean Up after Failed Restore
+## <a id="manual-clean"></a>Clean up after failed restore
 
 If your restore process fails, then the process might leave the BBR restore directory on the instance.
 As a result, any subsequent restore attempts might fail.
